client/src/components/ManageAccount/ManageAccount.scss
/*
  Wrappers
*/
.manage-account-wrapper {
  display: flex;
  .container-fluid {
    padding: 20px 40px 0 25px !important; /* overwrite Bootstrap */ /* NOTE: The `!important` may not be necessary */
    display: flex;
    flex-direction: column;
    margin: 0;
  }
}
.manage-account-content {
  a {
    color: #9d85ef;
  }
}
.user-profile {
  flex-grow: 1;

  @media (min-width: 992px) {
    /* Hide Border when tables stack on one another */
    .user-profile-main {
      border-right: 1px solid rgba(112, 112, 112, 0.25);
    }
  }
  .btn-link {
    color: #9d85ef;
  }
}

/*
  Components
*/
.manage-account-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-bottom: 1px solid #707070;
  margin-left: -15px !important;
  margin-right: -15px !important;
  h5 {
    font-weight: 400;
    color: #484848;
  }
}
.manage-account-modal {
  .modal-content {
    border-radius: 0 !important;
  }
}
.manage-account-modal-header {
  background-color: #f4f4f4;
  color: #484848;
  padding: 1rem;
  span {
    color: #484848;
    font-size: 1.1rem;
    margin: 0;
  }
}
// Tables
.manage-account-table {
  font-size: 14px;
  table-layout: fixed;
  line-height: 2.3rem;
  td,
  th {
    padding: 0;
    width: 50%;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    vertical-align: middle;
    span {
      margin-left: 1rem;
    }
  }
  th {
    font-weight: normal;
    color: #707070;
  }
  td {
    font-weight: bold;
    color: #484848;
  }
  th.research-bio {
    display: flex;
    flex-direction: column;
    width: 100%;
  }
  td.research-bio {
    padding-top: 0.5rem;
    width: 100%;
    color: #707070;
    font-weight: normal;
    line-height: 16px;
    white-space: normal;
    overflow: visible;
  }
}
.profile-component-wrapper {
  margin-top: 1.25rem;

  /* Override striped bootstrap table */
  .table-striped > tbody {
    tr:nth-child(even) {
      background-color: rgba(198, 198, 198, 0.1);
    }
    tr:nth-child(odd) {
      background-color: white;
    }
  }
}
.profile-component-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 16px;
  border-bottom: solid 1px #707070;
  padding: 0 0 0.5rem 0;
}
.profile-component-body {
  padding: 0 0.5rem;
  font-size: 14px;
  margin-bottom: 1rem;
}
// Buttons and Forms
.manage-account-submit-button {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-radius: 0;
  font: bold 12px Roboto, sans-serif;
  padding: 0.5rem 1rem;
  border: 0 !important; /* override `.workbench-content .btn-secondary` */
  background-color: #9d85ef !important; /* override `.workbench-content .btn-secondary` */
  color: white !important; /* override `.workbench-content .btn-secondary` */
}

.form-button {
  font-size: 16px;
  font-weight: bold;
  padding: 0;
}
.license-button {
  background-color: transparent !important;
  font-weight: bold;
}
.change-password-form {
  font-size: 14px;
  display: flex;
  flex-direction: column;
}
.password-warning {
  font-size: 14px;
}

.welcomeMessageGeneral {
  margin: 0 0 20px 0;
  flex-grow: 0;
}

